selfcheck button isEnable

--- a/pppppp/View/CreatePointView/SelfCheckView/SelfCheckView.storyboard
+++ b/pppppp/View/CreatePointView/SelfCheckView/SelfCheckView.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1XU-g0-ga0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1XU-g0-ga0">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -43,7 +43,7 @@
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="badButtonPressed" destination="1XU-g0-ga0" eventType="touchUpInside" id="rGh-pK-eir"/>
+                                                    <action selector="statusButtonPressedWithSender:" destination="1XU-g0-ga0" eventType="touchUpInside" id="h9l-ox-rRB"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Db7-X6-Rie">
@@ -59,7 +59,7 @@
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="normalButtonPressed" destination="1XU-g0-ga0" eventType="touchUpInside" id="gyx-N0-uaI"/>
+                                                    <action selector="statusButtonPressedWithSender:" destination="1XU-g0-ga0" eventType="touchUpInside" id="0VD-EY-AgK"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tfF-Vh-u3J">
@@ -75,7 +75,7 @@
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="goodButtonPressed" destination="1XU-g0-ga0" eventType="touchUpInside" id="Svg-KA-NGk"/>
+                                                    <action selector="statusButtonPressedWithSender:" destination="1XU-g0-ga0" eventType="touchUpInside" id="Ged-Pr-h5k"/>
                                                 </connections>
                                             </button>
                                         </subviews>
