--- a/pppppp/View/AddFriend/FriendProfileView/FriendProfileView.storyboard
+++ b/pppppp/View/AddFriend/FriendProfileView/FriendProfileView.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LYz-DZ-wCV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LYz-DZ-wCV">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -21,7 +22,7 @@
                                 <rect key="frame" x="-59" y="-114" width="534" height="1164"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addFriendGradationBackground" translatesAutoresizingMaskIntoConstraints="NO" id="aNt-9z-eNH">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addFriendGradationBackground" translatesAutoresizingMaskIntoConstraints="NO" id="aNt-9z-eNH">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h2i-99-U3q">
@@ -89,18 +90,17 @@
                         <viewLayoutGuide key="safeArea" id="EgC-1K-tGS"/>
                         <color key="backgroundColor" name="mainColor"/>
                         <constraints>
-                            <constraint firstAttribute="top" secondItem="Leb-HE-572" secondAttribute="bottom" id="06a-Is-ZiU"/>
                             <constraint firstAttribute="bottom" secondItem="aNt-9z-eNH" secondAttribute="bottom" id="5E1-6k-3RG"/>
                             <constraint firstItem="0TE-MI-7pn" firstAttribute="top" secondItem="h2i-99-U3q" secondAttribute="top" constant="-40" id="Gvt-pw-H4t"/>
                             <constraint firstItem="Leb-HE-572" firstAttribute="top" secondItem="EgC-1K-tGS" secondAttribute="top" id="QVd-by-paq"/>
                             <constraint firstItem="h2i-99-U3q" firstAttribute="centerX" secondItem="UgX-6g-dW2" secondAttribute="centerX" id="Qee-vT-Ixk"/>
                             <constraint firstItem="aNt-9z-eNH" firstAttribute="top" secondItem="UgX-6g-dW2" secondAttribute="top" id="URJ-8j-K6X"/>
                             <constraint firstItem="Leb-HE-572" firstAttribute="leading" secondItem="UgX-6g-dW2" secondAttribute="leading" constant="8" id="h8s-7O-X3f"/>
-                            <constraint firstItem="aNt-9z-eNH" firstAttribute="leading" secondItem="EgC-1K-tGS" secondAttribute="leading" id="jye-GA-Tdu"/>
+                            <constraint firstItem="aNt-9z-eNH" firstAttribute="leading" secondItem="UgX-6g-dW2" secondAttribute="leading" id="jye-GA-Tdu"/>
                             <constraint firstItem="h2i-99-U3q" firstAttribute="centerY" secondItem="UgX-6g-dW2" secondAttribute="centerY" id="lfJ-7c-MVe"/>
                             <constraint firstItem="0TE-MI-7pn" firstAttribute="centerX" secondItem="UgX-6g-dW2" secondAttribute="centerX" id="opE-ho-xPU"/>
                             <constraint firstItem="h2i-99-U3q" firstAttribute="leading" secondItem="EgC-1K-tGS" secondAttribute="leading" constant="24" id="ptE-WH-g69"/>
-                            <constraint firstItem="aNt-9z-eNH" firstAttribute="trailing" secondItem="EgC-1K-tGS" secondAttribute="trailing" id="qMF-eA-m3s"/>
+                            <constraint firstItem="aNt-9z-eNH" firstAttribute="trailing" secondItem="UgX-6g-dW2" secondAttribute="trailing" id="qMF-eA-m3s"/>
                             <constraint firstItem="EgC-1K-tGS" firstAttribute="trailing" secondItem="h2i-99-U3q" secondAttribute="trailing" constant="24" id="wGu-ZU-4eu"/>
                         </constraints>
                     </view>
